# ralph-loop

./: .gitignore  README.md  codebase_map.md  init.sh  prd.json  progress.txt  prompt.md  pyproject.toml  ralph-understand.sh  ralph.sh  ui.sh
docs/: agent_adapters_design.md  exec_mode_design.md  mcp_server_design.md
examples/uv-python/: .gitignore  README.md  init.sh  pyproject.toml
examples/uv-python/scripts/ralph/: codebase_map.md  feature_understand_prompt.md  prd_prompt.txt  progress.txt  prompt.md  ralph-understand.sh  ralph.sh  test_prd.json  understand_prompt.md
examples/uv-python/src/ralph_uv_example/: __init__.py  cli.py
examples/uv-python/tests/: test_greet.py
ralph_py/: __init__.py  __main__.py  cli.py  config.py  git.py  guards.py  init_cmd.py  loop.py  mcp_server.py  prd.py
ralph_py/agents/: __init__.py  base.py  codex.py  custom.py
ralph_py/mcp/: __init__.py  logging.py  prompts.py  resources.py  runner.py  schema.py  server.py
ralph_py/mcp/transport/: __init__.py  http.py  locks.py  stdio.py
ralph_py/ui/: __init__.py  animated_art.py  base.py  codex_transcript.py  plain.py  rich_ui.py  textual.tcss  textual_ui.py
specs/: spec.md  textual_ui_redesign_spec.md  textual_ui_spec.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_guards.py  test_loop.py  test_mcp_protocol.py  test_mcp_resources.py  test_mcp_runner.py  test_mcp_schema.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_transport_locks.py  test_prd.py
